<resources>
    <string name="app_name">Pokedex App</string>
    <string name="pokemon_item_content_description">pokemon_item</string>
    <string name="current_pokemon">Current Pokemon</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="type">Type</string>
    <string name="image_1">image_1</string>
    <string name="image_2">image_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moves">Moves</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="speed">Speed</string>
    <string name="special_defense">Special Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="defense">Defense</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="ability">Ability :</string>
</resources>