<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="be.dilibel.pokedex_app.viewmodels.PokedexViewModel" />
        <variable
            name="pokemonStatsFragment"
            type="be.dilibel.pokedex_app.fragments.PokemonStatsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tablayout_rounded_corner"
        android:paddingTop="20dp"
        tools:context="be.dilibel.pokedex_app.MainActivity.PokemonStatsFragment" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="HP"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[0].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Attack"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[1].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9272"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/defense"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar12727"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[2].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView52727"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/special_attack"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar27272"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[3].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView973"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/special_defense"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar371"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[4].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView37375"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/speed"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar37376"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progress="@{viewModel.currentPokemon.stats[5].baseStat}"
                    android:theme="@style/ProgressBar"
                    tools:progress="100" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>